--- a/YinHuangSignIn/YinHuangSignIn-Info.plist
+++ b/YinHuangSignIn/YinHuangSignIn-Info.plist
@@ -5,9 +5,11 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>${PRODUCT_NAME}</string>
+	<string>黄鸥&amp;银璐</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
+	<key>CFBundleIconFile</key>
+	<string>icon.png</string>
 	<key>CFBundleIcons</key>
 	<dict>
 		<key>CFBundlePrimaryIcon</key>
@@ -19,9 +21,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.xieliang.${PRODUCT_NAME:rfc1034identifier}</string>
-	<key>CFBundleIconFile</key>
-	<string>icon.png</string>
+	<string>com.pretang.naryou-merchant</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
